--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,56 +1,59 @@
 {
-  "extends": [
-    "airbnb",
-    "airbnb/hooks",
-    "eslint:recommended",
-    "prettier",
-    "plugin:jsx-a11y/recommended",
-    "plugin:react/recommended"
-  ],
-  "parser": "@babel/eslint-parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "requireConfigFile": false,
-    "babelOptions": {
-      "presets": ["@babel/preset-react"]
-    }
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es2023": true,
-    "jest": true
-  },
-  "rules": {
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
-    "react/jsx-props-no-spreading": 0,
-    "react/react-in-jsx-scope": 0,
-    "react-hooks/rules-of-hooks": "error",
-    "no-console": 0,
-    "react/state-in-constructor": 0,
-    "indent": 0,
-    "linebreak-style": 0,
-    "react/prop-types": 0,
-    "jsx-a11y/click-events-have-key-events": 0,
-    "no-param-reassign": 0,
-    "no-nested-ternary": 0,
-    "jsx-a11y/label-has-associated-control": 0,
-    "react/function-component-definition": 0,
-    "no-plusplus": 0,
-    "no-unused-vars": ["error", { "argsIgnorePattern": "_" }],
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "es5",
-        "singleQuote": true,
-        "printWidth": 140,
-        "tabWidth": 4,
-        "semi": true,
-        "endOfLine": "auto",
-        "arrowParens": "avoid"
-      }
-    ]
-  },
-  "plugins": ["prettier", "react", "react-hooks"]
+	"extends": [
+		"airbnb",
+		"airbnb/hooks",
+		"eslint:recommended",
+		"prettier",
+		"plugin:jsx-a11y/recommended",
+		"plugin:react/recommended"
+	],
+	"parser": "@babel/eslint-parser",
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module",
+		"requireConfigFile": false,
+		"babelOptions": {
+			"presets": ["@babel/preset-react"]
+		}
+	},
+	"env": {
+		"browser": true,
+		"node": true,
+		"es2023": true,
+		"jest": true
+	},
+	"rules": {
+		"import/no-extraneous-dependencies": [
+			"error",
+			{ "devDependencies": true }
+		],
+		"react/jsx-props-no-spreading": 0,
+		"react/react-in-jsx-scope": 0,
+		"react-hooks/rules-of-hooks": "error",
+		"no-console": 0,
+		"react/state-in-constructor": 0,
+		"indent": 0,
+		"linebreak-style": 0,
+		"react/prop-types": 0,
+		"jsx-a11y/click-events-have-key-events": 0,
+		"no-param-reassign": 0,
+		"no-nested-ternary": 0,
+		"jsx-a11y/label-has-associated-control": 0,
+		"react/function-component-definition": 0,
+		"no-plusplus": 0,
+		"no-unused-vars": ["error", { "argsIgnorePattern": "_" }],
+		"prettier/prettier": [
+			"error",
+			{
+				"trailingComma": "es5",
+				"singleQuote": true,
+				"printWidth": 140,
+				"tabWidth": 4,
+				"semi": true,
+				"endOfLine": "auto",
+				"arrowParens": "avoid"
+			}
+		]
+	},
+	"plugins": ["prettier", "react", "react-hooks"]
 }
