--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.9.0",
-		"@types/react": "^18.3.4",
+		"@eslint/eslintrc": "^3.1.0",
+		"@eslint/js": "^9.9.1",
+		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react-swc": "^3.7.0",
-		"eslint": "^9.9.0",
+		"eslint": "^9.9.1",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-jsx-a11y": "^6.9.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
-		"eslint-plugin-react-refresh": "^0.4.10",
+		"eslint-plugin-react-refresh": "^0.4.11",
 		"globals": "^15.9.0",
 		"prettier": "^3.3.3",
 		"vite": "^5.4.2"
